nginx-named-port-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-named-port
    application: v1
  name: nginx-named-port
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-named-port
  template:
    metadata:
      labels:
        app: nginx-named-port
    spec:
      containers:
      - image: nginx:1.18
        name: nginx
        ports:
        - containerPort: 80
          name: http-port
